[BUGFIX] Improve Context Menu Accessibility
This patch addresses several issues within the context menu.

The context menu has been rewritten as a reactive web component.
All entries are now managed as a dataset within the component,
with only the node itself used internally. This significantly
improves reliability and simplifies handling by eliminating the
need to parse the markup again to retrieve information.

Clicking outside the menu now consistently closes it. To achieve
this, the element rendering was moved to the top frame, and an
invisible layer acts as a trigger for closing the menu. This layer
spans both the main frame and the content frame, allowing clicks
outside the menu to pass through and initiate new interactions.

Menu items are now structured correctly as a menu, with proper
positioning, setsize, and ARIA labels. The left arrow key now only
closes submenus and no longer closes the context menu when the
selected element is at the root level.

Instead of <li> elements, <button> elements are now used, and
acceptance tests have been adapted accordingly.

Resolves: #106066
Resolves: #104171
Releases: main, 13.4
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/87887
Tested-by: Andreas Kienast <akienast@scripting-base.de>
Tested-by: Benjamin Franzke <ben@bnf.dev>
Tested-by: Benjamin Kott <benjamin.kott@outlook.com>
Tested-by: core-ci <typo3@b13.com>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -3386,9 +3386,10 @@ typo3-backend-form-selecttree-toolbar{display:block}
 .card-notice{--typo3-card-color:var(--typo3-surface-container-notice-text);--typo3-card-bg:var(--typo3-surface-container-notice)}
 .card-default{--typo3-card-color:var(--typo3-surface-container-default-text);--typo3-card-bg:var(--typo3-surface-container-default)}
 .context-menu{font-size:var(--typo3-component-font-size);line-height:var(--typo3-component-line-height);padding:2px;position:absolute;z-index:1000;color:var(--typo3-component-color);border:var(--typo3-component-border-width) solid var(--typo3-component-border-color);background-color:var(--typo3-component-bg);box-shadow:var(--typo3-component-box-shadow-flyout);border-radius:var(--typo3-component-border-radius);max-height:calc(100% - 20px);max-width:calc(100% - 20px);margin:0;overflow-y:auto;top:0;inset-inline-start:0}
+.context-menu-overlay{z-index:1000;background-color:transparent;opacity:.1;position:fixed;inset:0}
 .context-menu-group{position:relative;display:flex;flex-direction:column;gap:1px;list-style:none;padding:0;margin:0;min-width:150px}
 .context-menu-divider{padding:0;height:0;margin-top:var(--typo3-list-item-padding-y);margin-bottom:var(--typo3-list-item-padding-y);border-top:var(--typo3-component-border-width) solid var(--typo3-component-border-color)!important;outline:0}
-.context-menu-item{position:relative;display:flex;border-radius:calc(var(--typo3-component-border-radius) - var(--typo3-component-border-width));gap:.5em;padding:var(--typo3-list-item-padding-y) var(--typo3-list-item-padding-x);cursor:pointer;text-decoration:none}
+.context-menu-item{position:relative;display:flex;width:100%;border-radius:calc(var(--typo3-component-border-radius) - var(--typo3-component-border-width));gap:.5em;padding:var(--typo3-list-item-padding-y) var(--typo3-list-item-padding-x);cursor:pointer;text-decoration:none;background-color:transparent;text-align:start;border:none}
 .context-menu-item:focus,.context-menu-item:hover{z-index:1;outline-offset:-1px}
 .context-menu-item:hover{color:var(--typo3-component-hover-color);background-color:var(--typo3-component-hover-bg);outline:1px solid var(--typo3-component-hover-border-color)}
 .context-menu-item:focus{color:var(--typo3-component-focus-color);background-color:var(--typo3-component-focus-bg);outline:1px solid var(--typo3-component-focus-border-color)}
